--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
     left: 0;
     right: 0;
     top: 0;
-    height: 72px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -202,7 +202,8 @@ body.light-theme .theme-btn:hover {
 ===================================================== */
 .hero {
     padding: 100px 0;
-    margin: 70px 0 0 0;
+    margin-top: 100px;
+    margin-bottom: 100px;
     max-height: 50vh;
     max-width: 100vw;
 }
@@ -492,3 +493,5 @@ body.light-theme #typing {
 body.light-theme .lead {
     color: #444;
 }
+
+
